content/consul/v1.22.x/content/docs/reference/agent/configuration-file/index.mdx
---
layout: docs
page_title: Consul agents configuration file reference
description: >-
  This section contains reference information for individual agent configuration files. Configure multiple agents at once. Assign attributes to agents. Learn about agent configuration file parameters and formatting. Review example configuration.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2025-11-05T11:02:51-05:00
last_modified: 2026-02-19T23:00:04.000Z
# END AUTO GENERATED METADATA
---

# Consul agents configuration file reference

This topic describes the parameters for configuring Consul agents.

Refer to the [Configure a Consul agent](/consul/docs/fundamentals/agent) guide for information on the following:

- Configuration files location
- Common configuration settings
- Reloadable configurations
- Starting and stopping a Consul agent

## Overview

Create one or more files to configure the Consul agent on startup. We recommend
grouping similar configurations, such as ACL parameters, into separate files to
better manage configuration changes.

Write configuration files in HCL or JSON. Both humans and computers can read and
edit JSON configuration files. JSON configuration consists of a single JSON
object with multiple configuration keys specified within it.

<CodeTabs heading="Example Configuration File">

```hcl
datacenter = "east-aws"
data_dir = "/opt/consul"
log_level = "INFO"
node_name = "foobar"
server = true
watches = [
  {
    type = "checks"
    handler = "/usr/bin/health-check-handler.sh"
  }
]

telemetry {
  statsite_address = "127.0.0.1:2180"
}
```

```json
{
  "datacenter": "east-aws",
  "data_dir": "/opt/consul",
  "log_level": "INFO",
  "node_name": "foobar",
  "server": true,
  "watches": [
    {
      "type": "checks",
      "handler": "/usr/bin/health-check-handler.sh"
    }
  ],
  "telemetry": {
    "statsite_address": "127.0.0.1:2180"
  }
}
```

</CodeTabs>

## Time-to-live values

Consul uses the Go `time` package to parse all time-to-live (TTL) values used in Consul agent configuration files. Specify integer and float values as a string and include one or more of the following units of time:

- `ns`
- `us`
- `µs`
- `ms`
- `s`
- `m`
- `h`

Examples:

- `'300ms'`
- `'1.5h'`
- `'2h45m'`

Refer to the [formatting specification](https://golang.org/pkg/time/#ParseDuration) for additional information.

## Duration formatting validation

When you configure timeout and duration values, Consul validates the formatting and enforces minimum values where applicable. When you use invalid duration strings, the agent will fail to start and the output will include a descriptive error message.

**Examples of valid duration formatting**:

- `"10s"` - 10 seconds
- `"1.5m"` - 1.5 minutes, equivalent to 90 seconds (`90s`)
- `"2h30m45s"` - Complex duration with hours, minutes, and seconds
- `"0s"` - Zero duration, although not all fields support this value.

**Examples of invalid formatting that produce errors**:

- `"10"` - Missing unit specification
- `"10x"` - Invalid unit, as `x` is not a recognized duration
- `""` - Empty string
- `"abc"` - Non-numeric string
- `"-5s"` - Negative durations are not accepted for timeout configurations

Some timeout configurations enforce minimum values to prevent connection issues or security vulnerabilities. For example, handshake timeouts typically require a minimum of 1 second. When a configured value is below the minimum, Consul reports a validation error during startup.

## Examples

The following configuration examples demonstrate scenarios for server and client agent configuration files.

@include 'examples/agent/server/encrypted.mdx'

@include 'examples/agent/server/service-mesh.mdx'

@include 'examples/agent/client/multi-interface.mdx'

@include 'examples/agent/client/register-service.mdx'
